# CloudIntell

./: .gitignore  README.md  langgraph.json  langgraph_app.py  main.py  pyproject.toml  sample_input.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
UI/: package-lock.json  package.json
UI/app/: error.tsx  layout.tsx  loading.tsx  page.tsx
UI/components/: ArchitectureFullView.tsx  CompareView.tsx  CopilotSidebar.tsx  DebateView.tsx  DebateWorkflowGraph.tsx  IaCCodeView.tsx  IaCGenerationPanel.tsx  SidebarNavigator.tsx  WorkflowGraph.tsx
UI/components/edges/: FarRightEdge.tsx
UI/components/nodes/: AgentNode.tsx  DecisionNode.tsx  StartEndNode.tsx  ToolNode.tsx
UI/hooks/: use-mobile.ts  useIaCGeneration.ts  useRunOrchestration.ts
src/cloud_intell/agents/: context.py  domain_nodes.py  supervisors.py  synthesizers.py  tool_execution.py
src/cloud_intell/graph/: builder.py
src/cloud_intell/infrastructure/: vector_store.py
src/cloud_intell/schemas/: models.py
src/cloud_intell/services/: architecture_service.py
src/cloudy_intell/: __init__.py  langgraph_app.py
src/cloudy_intell/agents/: __init__.py  context.py  debate_agents.py  domain_nodes.py  iac_generators.py  supervisors.py  synthesizers.py
src/cloudy_intell/config/: __init__.py  models.py  provider_meta.py  settings.py
src/cloudy_intell/graph/: debate_graph.py  iac_graph.py  routing.py  state_init.py  state_reducers.py  subgraphs.py
src/cloudy_intell/infrastructure/: __init__.py  checkpointer.py  llm_factory.py  (+2 more)
(+8 files in other folders)
